kubernetes/apps/mailserver/mailu/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mailu
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  hostnames:
    - mail.${D_HS}
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https-hs
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mailu-front
          namespace: mailserver
          port: 80
